[package]
name = "wolfssl-src"
version = "0.1.0+4.7.0"
authors = ["Theodore Cipicchio <theodore.cipicchio@m10.io>"]
edition = "2018"
description = "Source of wolfSSL and logic to build it"
license = "MIT/Apache-2.0"
repository = "https://github.com/m10io/wolfssl-src-rs"

[features]
# Use wolfssl520 submodule
wolfssl520 = []
# Use wolfssl470 submodule
wolfssl470 = []
sancov = [] # TODO: propagate this (changes nothing for now, for a successful build)

[dependencies]
bitflags = "1.2"
